# scsim

./: example.ipynb  perturbation_demo.ipynb  pyproject.toml
scsim/: __init__.py  config.py  core.py  exporters.py  perturbation.py  simulator.py
scsim/generators/: __init__.py  cells.py  counts.py  de.py  doublets.py  genes.py  programs.py
