[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "ruff>=0.14.14",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

